# connect4game

./: CHANGELOG.md  README.md  myconnect.cabal
app/: Data.hs  Main.hs  MyGame.hs
