cabal-version:      >=1.10
name:               myconnect4
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             Marco Esposito
maintainer:         maresp@tutanota.com

-- A copyright notice.
-- copyright:
category:           Game
build-type:         Simple
extra-source-files: CHANGELOG.md

executable myconnect4
    main-is:          Main.hs
    other-modules:   MyGame, Data

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14 && <4.15,
                       data-list-zigzag >=0.1.1.1 && <0.2   
    hs-source-dirs:   app
    default-language: Haskell2010

